# paperless-ngx-tools

./: Cargo.toml  README.md
src/: main.rs
