[package]
name = "paperless-ngx-tools"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"
description = "Paperless-ngx tools"
repository = "https://github.com/jcjones/paperless-ngx-tools"
readme = "README.md"

default-run = "paperless-ngx-tools"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
confy = "0.6.1"
env_logger = "0.9"
indicatif = { version = "0.17.11", features = ["tokio"] }
log = "0.4"
paperless_ngx_api = { version = "0.2.0", path = "../lib-paperless-ngx-rs" }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
thiserror = "2.0.11"
